# gutenberg-analysis

./: .gitignore  README.md
BookProject/: .gitignore  README.md  build.sbt
BookProject/resources/: catalog.txt
BookProject/resources/books/: book1.txt  book2.txt
BookProject/src/main/scala/: App.scala  FileFilter.scala  uniqueWordsPerText.scala
BookProject/src/main/scala/jobs/: CalculateSimilarity.scala  CreateDictionary.scala  WordCountTexts.scala
BookProject/src/main/scala/main/: App.scala
Docs/: experimentalResults.txt  hadoop-justification.txt  install.txt  internals.txt  log.txt
analysis/: CatalogAnalysis.ipynb  Filtering.ipynb  Ml-KNNResults.csv  MultiLabelKNN.ipynb  Results.ipynb  UniqueWordsAnalysis.ipynb
data/: .gitignore  filtered_texts_listing.txt  stopwords.txt
rust-processing/: Cargo.toml
rust-processing/src/: dictionary.rs  document_vectors.rs  main.rs  similarity_matrix.rs  sparse_vector.rs  tf_idf.rs
scripts/: 50uniqueWordsSamples.sh  README.md  collate_catalog.py  collate_query_results.py  compact_similarity_matrix.py  download_catalog  environment.yaml  extract_eligible_texts.py  get_compact_catalog  get_texts.py  load_gutenberg_cache.py  requirements.txt  run_complete_pipeline
scripts/sparql/: get_all_attributes.rq  get_all_attributes_optional.rq  get_author_agent.rq  get_subject_description.rq
scripts/utils/: acquire.py  cleanup.py  text.py
text-processing/: Cargo.toml
text-processing/src/: dictionary.rs  error.rs  main.rs  make_dictionary.rs  similarity_matrix.rs  sparse_vector.rs  sparse_vectors.rs  tf_idf.rs
(+2 files in other folders)
