[package]
name = "text-processing"
version = "0.1.0"
authors = ["Declan Kelly <dkelly.home@gmail.com>"]

[dependencies]
futures = "0.2.0-beta"
clap = "2.31.2"
log = "0.4.1"
env_logger = "0.5.6"
error-chain = "0.11.0"
rust-stemmers = "1.0.2"
serde_json = "1.0.13"
serde_derive = "1.0.33"
serde = "1.0.33"
itertools = "0.7.7"
rayon = "1.0.1"
indicatif = "0.9.0"